maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:23: error: not enough arguments for method setIndication: (x: Int, y: Int, i: Int)Unit.
Unspecified value parameter i.
    setIndication(x,y-1)}
                 ^JediEscaper:30: error: not found: value x
  return aMurNord(x,y+1)
                  ^JediEscaper:30: error: not found: value y
  return aMurNord(x,y+1)
                    ^JediEscaper:35: error: not found: value x
  return aMurOuest(x+1,y)
                   ^JediEscaper:35: error: not found: value y
  return aMurOuest(x+1,y)
                       ^